# python-project-52

./: .gitignore  Makefile  README.md  build.sh  env-example  pyproject.toml
.github/workflows/: my-test.yml
task_manager/: mixins.py  mixins_login.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/staticfiles/: staticfiles.json
task_manager/statuses/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  forms.py  mixins.py  models.py  task_filter.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base_crud.html  footer.html  header.html  index.html  layout.html  messages.html
task_manager/templates/errors/: 404.html  500.html
task_manager/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/templates/tasks/: create.html  delete.html  tasks.html  update.html  view_task.html
task_manager/templates/users/: create.html  delete.html  index.html  login.html  update.html  users.html
task_manager/tests/: test_index.py  test_labels.py  test_statuses_app.py  test_tasks.py  test_users_app.py
task_manager/users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_delete_customuser.py  0002_remove_customuser_creator.py  0005_delete_user.py  (+3 more)
(+3 files in other folders)
