[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Is system that allows you to set tasks, assign performers and change their statuses. To work with the system you need registration and authentication."
authors = ["Alexandr Sakhatov <sakhatoff@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]
repository = "https://github.com/Unt0ten/python-project-52"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
python-dotenv = "^1.0.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^23.3"
django-filter = "^23.4"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
